# image-editor

./: .gitignore  CMakeLists.txt  README.md  index.html  main.js  package.json  worker.js
src/: index.html  main.js  preload.js  renderer.js  worker.js
src/back-end/: CMakeLists.txt  main.cpp  title.cpp
src/back-end/include/: Image.hpp  ImageFile.hpp  Title.hpp
src/back-end/src/: CMakeLists.txt  Image.cpp  ImageFile.cpp  Title.cpp
src/front-end/: app.js  index.html  main.js  menu.js  preload.js  renderer.js  states.js
src/front-end/scripts/: composition.js  div-management.js  open-image.js  rgb-hsi-decomposition.js  rotate.js  scale.js
src/front-end/scripts/draw/: circ.js  free.js  line.js  rect.js
src/front-end/styles/: index.css
src/front-end/templates/: menu.js
src/front-end/workers/: image.js  title.js
